# swarmProject

./: PCB and Schematics  README.md
Camera and Sensors/: README.md  estimatedIntrinsics.py  laser.launch  objectLocalization.py  receive_sim_cam.py  runBeforeRealTime.sh  scan.py  teb_course.launch
Camera and Sensors/husky/: Install_Husky_Robot.txt
Communication/: README.md  Talker.py
Communication/IntegerManipulation/: README.md  master_bot.py  worker_bot.py
Communication/SimpleComms/: README.md
Communication/TwoWayMatrix/: masterbot.py  worker_a.py  (+1 more)
Documentation/: swarm_BlockDiag_Ver2.vsdx  swarm_MPI_ProgStruct.vsdx  swarm_SystemBlockDiag.vsdx
Husky/: README  README.md
Movement/: Make husky move.txt  PID.py  Python Script for simple movement.txt  README  README.md  astar.py  dastar.py  move_astar.py  simplemove  simplemove.py
Object Detection Yolo V3/: README.md  Train Customized Model for Object Detection.docx  Yolo V3 Installation Process and User Steps.docx
PCB and Schematics/: PCB and Schematics  SWARM UGV PCB Rev B-cache.lib  SWARM UGV PCB Rev B.kicad_pcb  SWARM UGV PCB Rev B.kicad_pcb-bak  SWARM UGV PCB Rev B.net  SWARM UGV PCB Rev B.pro  SWARM UGV PCB Rev B.sch  SWARM UGV PCB Rev B.sch-bak
Serial Communication/: Arduino  Jetson Nano  READEME  README
husky/husky_launch/worlds/: CMakeLists.txt  package.xml
mpi/: README.md  compareBCast.c  masterbot.py  masterbot_V2.py  masterbot_V3.py  mpiHello.c  mpiPingPong.c  mpiRingPtP  mpiSendRecv.c  workbot.py  worker_aV2.py  worker_aV3.py  worker_bV2.py  worker_bV3.py
multi_robot/: package.xml
(+48 files in other folders)
