<?xml version="1.0"?>
<package>
  <name>husky_launch</name>
  <version>0.2.5</version>
  <description>Clearpath Husky Simulator bringup</description>

  <author email="rtellez@theconstructsim.com">Ricardo Tellez</author>
  <maintainer email="rtellez@theconstructsim.com">Ricardo Tellez</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>husky_control</run_depend>
  <run_depend>husky_description</run_depend>
  <run_depend>pointcloud_to_laserscan</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rostopic</run_depend>

  <export>
  </export>
</package>
